Version 2.1.1
  Bugfixes:
  - Fix crash in outer joins where a local filter condition needs different
    columns than the conditions that are pushed down.
    Bug found by Jaime Casanova and fixed by Tatsuro Yamada.

Version 2.1.0, released 2018-10-01
  Enhancements:
  - Add support for the "json" PostgreSQL data type.
    On the Oracle side, CLOB or VARCHAR2 can be used.
    Suggested by "bsislow".
  - Add support and documentation for building with Microsoft Visual Studio.
    Patch by Christian Ullrich.
  - Enable delayed loading of the Oracle DLL on Windows.
    This allows better diagnostic messages if the library cannot be loaded.
    Patch by Christian Ullrich.
  - Report the correct SQLSTATE for constraint violation and deadlock errors.
    Idea by "omistler".
  - Push down outer joins to Oracle.
    Patch by Tatsuro Yamada, courtesy of NTT OSS Center.

  Bugfixes:
  - Missing check if Oracle data types can be converted to PostgreSQL types.
    This bug was introduced in 2.0.0.
  - When oracle_fdw is loaded, initializing background workers
    (e.g. for parallel query) failed with:
       ERROR:  invalid cache ID: 41
  - Don't try to push down IS [NOT] DISTINCT FROM expressions.
    Oracle does not support this standard SQL syntax.
  - Don't push down IS [NOT] NULL tests on boolean expressions.
    This caused "ORA-00907: missing right parenthesis".
    Noticed by Tatsuro Yamada during testing with "sqlsmith".
  - Allow foreign tables to be defined on Oracle queries that contain double
    quotes.  This caused an error message due to a sanity check that has become
    obsolete when this feature was introduced.
    Noted by "Bpapman".
  - Disable push-down of foreign joins in queries with FOR UPDATE.
    These used to be pushed down before, but without the FOR UPDATE clause,
    leading to incorrect behavior in the face of concurrency.
    Noted and fixed by Tatsuro Yamada.

Version 2.0.0, released 2017-09-15
  Incompatible changes: