@@ -3,6 +3,11 @@ Version 2.1.1
   - Fix crash in outer joins where a local filter condition needs different
     columns than the conditions that are pushed down.
     Bug found by Jaime Casanova and fixed by Tatsuro Yamada.
+  - Fix push-down of foreign scan conditions with variables belonging
+    to other tables.
+    This can lead to wrong results and warnings like:
+    WARNING:  column number x of foreign table "y" does not exist in
+              foreign Oracle table, will be replaced by NULL
 
 Version 2.1.0, released 2018-10-01
   Enhancements:
